fix(container): fix overflow

--- a/src/stylus/5_trumps/basic.styl
+++ b/src/stylus/5_trumps/basic.styl
@@ -22,6 +22,9 @@
 .-overflow
   overflow visible !important
 
+.-no-overflow
+  overflow hidden !important
+
 .-scroll-x
   overflow-x auto !important
 
